UI changes for Trials section. Fixed header sub title alignment

--- a/public/ctrp/ui/css/override.css
+++ b/public/ctrp/ui/css/override.css
@@ -339,6 +339,12 @@ form label {
 
 
 /* New UI Overrides */
+header .sub-title {
+    font-size: large;
+    font-weight: bold;
+    margin-left: 69px;
+}
+
 body {
     font-family: verdana, arial, helvetica, sans-serif;
     font-size: 12px;
@@ -396,8 +402,16 @@ form {
 }
 
 h4, .panel-title {
-    font-size: 16px;
     color: #2A71A5;
+}
+h4 {
+    font-size: 16px;
+}
+.panel-title {
+    font-size: 14px;
+}
+.panel-heading {
+    padding: 6px 15px;
 }
 
 .glyphicon {
@@ -510,4 +524,13 @@ h4, .panel-title {
 .md-sidenav-right {
     z-index: 9999;
     min-width: 400px;
+}
+
+.btn-toolbar ng-md-icon {
+    height: 13px;
+    width: 12px;
+}
+
+input[type=radio] {
+    margin: 0;
 }
